# adventofcode-2022

./: .gitignore  CMakeLists.txt  prepare
day01/: part1.c  part2.c
day02/: part1.c  part2.c
day03/: part1.c  part2.c
day04/: part1.c  part2.c
day05/: input.txt  part1.c  part2.c
day06/: part1.c  part2.c
day07/: part1.c  part2.c
day08/: part1.c  part2.c
day09/: part1.c  part2.c
day10/: part1.c  part2.c
day11/: part1.c  part2.c
day12/: part1.c  part2.c
day13/: part1.c  part2.c
day14/: input.txt  part1.c  part2.c
day16/: input.txt  part1.c  part2.c
day17/: part1.c  part2.c
day19/: input.txt  part1.c  part2.c
day20/: input.txt  part1.c  part2.c
day21/: part1.c  part2.c
day22/: part1.c  part2.c
day25/: part1.c
lib/: arraylist.c  arraylist.h  general_functions.c  general_functions.h  macros.h  queue.c  queue.h  treeset.c  treeset.h
