cmake_minimum_required(VERSION 3.16)
project(adventofcode_2022 C)

set(CMAKE_C_STANDARD 11)

include_directories(lib)

add_executable(day01_1 day01/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day01_2 day01/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day02_2 day02/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day02_1 day02/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day03_2 day03/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day03_1 day03/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day04_1 day04/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day04_2 day04/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day05_1 day05/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day05_2 day05/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day06_1 day06/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day06_2 day06/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day07_1 day07/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day07_2 day07/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day08_1 day08/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day08_2 day08/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)