cmake_minimum_required(VERSION 3.16)
project(adventofcode_2022 C)

set(CMAKE_C_STANDARD 11)

include_directories(lib)

add_executable(day01_1 day01/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day01_2 day01/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day02_2 day02/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day02_1 day02/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day03_2 day03/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day03_1 day03/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day04_1 day04/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day04_2 day04/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day05_1 day05/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day05_2 day05/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day06_1 day06/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day06_2 day06/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day07_1 day07/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day07_2 day07/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day08_1 day08/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day08_2 day08/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day09_1 day09/part1.c lib/general_functions.h lib/general_functions.c lib/treeset.c lib/treeset.h)
add_executable(day09_2 day09/part2.c lib/general_functions.h lib/general_functions.c lib/treeset.c lib/treeset.h)

add_executable(day10_1 day10/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day11_1 day11/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.c lib/arraylist.h)
add_executable(day12_1 day12/part1.c lib/general_functions.h lib/general_functions.c lib/queue.c lib/queue.h lib/arraylist.h lib/arraylist.c)
add_executable(day13_1 day13/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day14_1 day14/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day15_1 day15/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day16_1 day16/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day17_1 day17/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.c lib/arraylist.h)
add_executable(day18_1 day18/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day19_1 day19/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day20_1 day20/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c lib/queue.c lib/queue.h)
add_executable(day21_1 day21/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day22_1 day22/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day23_1 day23/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day24_1 day24/part1.c lib/general_functions.h lib/general_functions.c)
add_executable(day25_1 day25/part1.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day10_2 day10/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day11_2 day11/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.c lib/arraylist.h)
add_executable(day12_2 day12/part2.c lib/general_functions.h lib/general_functions.c lib/queue.c lib/queue.h lib/arraylist.h lib/arraylist.c)
add_executable(day13_2 day13/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day14_2 day14/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
add_executable(day15_2 day15/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day16_2 day16/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day17_2 day17/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.c lib/arraylist.h)
add_executable(day18_2 day18/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day19_2 day19/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day20_2 day20/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c lib/queue.c lib/queue.h)
add_executable(day21_2 day21/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day22_2 day22/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day23_2 day23/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day24_2 day24/part2.c lib/general_functions.h lib/general_functions.c)
add_executable(day25_2 day25/part2.c lib/general_functions.h lib/general_functions.c lib/arraylist.h lib/arraylist.c)
